# rust-emse-2020

./: .gitignore  README.md
analysis/: CDN Analysis.ipynb  evolysis-rustcg.py
api-pair-extract/: extractor.py  run.sh
bindings/: Cargo.toml
bindings/src/: lib.rs
docs.rs/: scrap.py
rustsec/: README.md  extract-rustcg.py  merge-rustcy.py  splitting.md  test-rustcg.py
ufify/: run.sh  ufiify-rustcg.py
