[package]
name = "praezi"
version = "0.1.0"
authors = ["Joseph Hejderup <jhejderup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "semver_ffi"
crate-type = ["dylib"]


[dependencies]
semver = "0.9.0"
libc = "0.2.33"